# rules_haxe

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  def.bzl  hxformat.json  providers.bzl  repo.bzl  rules.bzl  rules_test.bzl  toolchain.bzl  utils.bzl
docs/: BUILD
templates/: BUILD.dist.bazel.tpl  GenMainTest.hx  RulesHaxeUtils.hx  Utils.hx  copy_hxcpp_includes.sh  haxelib_install.sh  postprocess_hxcpp.sh  run_haxe.sh
test/: BUILD  external_module_a.bzl  haxe_executable_dependency.bzl  haxe_executable_subpackage.bzl  haxe_library_dependency.bzl  internal_module_a.bzl  rules_test.bzl  rules_testsuite.bzl
test/standalone/module-a/src/main/haxe/com/a/: ModuleA.hx
utilities/: postprocess_dox.py
